# mahjax

./: .gitignore  .readthedocs.yml  LICENSE  MANIFEST.in  Makefile  README.md  mkdocs.yml  pyproject.toml  requirements.txt  setup.py
.github/workflows/: ci.yml  tests.yml
docs/: api.md  index.md  mahjong-basics.md  no_red_mahjong.md  red_mahjong.md  requirements.txt  rule.md  ui.md  visualization.md
examples/: README.md  agent.py  bc.py  collect_offline_data.py  network.py  ppo_with_reg.py
examples/networks/: no_red_network.py  red_network.py
examples/no_red/: README.md
mahjax/: __init__.py  action.py  core.py  hand.py  meld.py  players.py  state.py  tile.py  yaku.py
mahjax/_src/: struct.py  types.py  visualizer.py
mahjax/_src/assets/: __init__.py
mahjax/_src/assets/tiles/: __init__.py  generate_en_tiles.py
mahjax/_src/dwg/: mahjong_visualizer.py
mahjax/no_red_mahjong/: action.py  env.py  hand.py  meld.py  observation.py  players.py  rule_based_players.py  shanten.py  state.py  tile.py  visualization.py  yaku.py
mahjax/red_mahjong/: __init__.py  action.py  constants.py  env.py  hand.py  meld.py  observation.py  players.py  shanten.py  state.py  struct.py  tile.py  types.py  visualization.py  yaku.py
mahjax/ui/: agents.py  app.py  game_manager.py  utils.py
mahjax/ui/static/: app.js  index.html  styles.css
mahjax/wrappers/: auto_reset_wrapper.py
tests/no_red_mahjong/: test_env.py  test_observe.py  test_play.py  test_special_case.py  test_visualize.py
tests/no_red_mahjong/assets/: riichi_test.json  ron_test.json  tsumo_test.json
tests/red_mahjong/: conftest.py  test_env.py  test_hand.py  test_meld.py  test_observe.py  test_parity.py  test_play.py  test_replay.py  test_shanten.py  test_special_case.py  test_tile.py  test_visualize.py  test_yaku.py
tests/red_mahjong/assets/: shanten.json  yaku_test.json
tests/red_mahjong/assets/mjlog/: 2021070100gm-00a9-0000-051217a5.mjlog  2021070100gm-00a9-0000-055d72de.mjlog  2021070100gm-00a9-0000-0ec27260.mjlog  2021070100gm-00a9-0000-12c51485.mjlog  2021070100gm-00a9-0000-1cd258ec.mjlog  2021070100gm-00a9-0000-1d273360.mjlog  2021070100gm-00a9-0000-20acfd6e.mjlog  2021070100gm-00a9-0000-2d5d509c.mjlog  2021070100gm-00a9-0000-32da5f03.mjlog  2021070100gm-00a9-0000-3dd621b6.mjlog  2021070100gm-00a9-0000-4e664708.mjlog  2021070100gm-00a9-0000-61debb77.mjlog  2021070100gm-00a9-0000-7b1e5615.mjlog  2021070100gm-00a9-0000-7dbeeb8e.mjlog  2021070100gm-00a9-0000-8ad3d5c9.mjlog  2021070100gm-00a9-0000-8d2b107a.mjlog  2021070100gm-00a9-0000-90536b90.mjlog  2021070100gm-00a9-0000-a5080734.mjlog  2021070100gm-00a9-0000-a578667b.mjlog  2021070100gm-00a9-0000-b172fc78.mjlog  2021070100gm-00a9-0000-b2e49a30.mjlog  2021070100gm-00a9-0000-b34c84c8.mjlog  2021070100gm-00a9-0000-b78f8708.mjlog  2021070100gm-00a9-0000-bb6a19a6.mjlog  2021070100gm-00a9-0000-bb9b3c32.mjlog  2021070100gm-00a9-0000-bf152b2b.mjlog  2021070100gm-00a9-0000-c2bb1ca3.mjlog  2021070100gm-00a9-0000-c3e30fad.mjlog  2021070100gm-00a9-0000-d66aa126.mjlog  2021070100gm-00a9-0000-e0f87bd3.mjlog  2021070100gm-00a9-0000-e331b46b.mjlog  2021070100gm-00a9-0000-e755cf02.mjlog  2021070100gm-00a9-0000-eb06c7e0.mjlog  2021070100gm-00a9-0000-f3480cc0.mjlog  2021070100gm-00a9-0000-fb529093.mjlog  2021070101gm-00a9-0000-180df191.mjlog  2021070101gm-00a9-0000-2d0d8798.mjlog  2021070101gm-00a9-0000-6ac940c6.mjlog  2021070101gm-00a9-0000-73db2505.mjlog  2021070101gm-00a9-0000-78172369.mjlog  (+260 more)
