[project]
name = "mahjax"
description = "GPU-accelerated vectorized mahjong simulators for reinforcement learning"
readme = "README.md"
requires-python = ">=3.9"
license = "Apache-2.0"
license-files = ["LICENSE"]
authors = [
    { name = "Soichiro Nishimori", email = "gatikiti.630@gmail.com" }
]

classifiers = [
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dynamic = ["version"]
dependencies = [
    "fastapi>=0.128.0",
    "jax>=0.4.28",
    "svgwrite>=1.4.3",
    "typing-extensions>=4.2.0",
    "uvicorn>=0.40.0",
]

[project.urls]
"Source" = "https://github.com/nissymori/mahjax"

[tool.setuptools.dynamic]
version = { attr = "mahjax.__version__" }

[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools.package-data]
"*" = ["*.svg"]
"mahjax.no_red_mahjong.cache" = ["*.npz"]

[build-system]
requires = ["setuptools>=77.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 120

[tool.ruff]
line-length = 120
target-version = "py39"

[tool.ruff.lint]
select = ["C90", "E", "F", "I", "W"]
ignore = ["E501", "E741"]

[tool.ruff.lint.mccabe]
max-complexity = 18

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 120
