[project]
name = "mahjax"
description = "GPU-accelerated vectorized mahjong simulators for reinforcement learning"
readme = "README.md"
requires-python = ">=3.9"
license = "Apache-2.0"
license-files = ["LICENSE"]
authors = [
    { name = "Soichiro Nishimori", email = "gatikiti.630@gmail.com" }
]

classifiers = [
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dynamic = ["version"]
dependencies = [
    "fastapi>=0.128.0",
    "jax>=0.4.28",
    "svgwrite>=1.4.3",
    "typing-extensions>=4.2.0",
    "uvicorn>=0.39.0",
]

[project.urls]
"Source" = "https://github.com/nissymori/mahjax"

[tool.setuptools.dynamic]
version = { attr = "mahjax.__version__" }

[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools.package-data]
"*" = ["*.svg"]
"mahjax.no_red_mahjong.cache" = ["*.npz"]

[build-system]
requires = ["setuptools>=77.0", "wheel"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
    { include-group = "lint" },
    { include-group = "typing" },
    { include-group = "test" },
    { include-group = "coverage" },
]
lint = [
    "blackdoc>=0.3.9",
    "ruff>=0.14.11",
]
typing = [
    "mypy>=1.19.1",
]
test = [
    "pytest>=8.4.2",
    "pytest-xdist>=3.8.0",
]
coverage = [
    "pytest-cov>=7.0.0",
]

[tool.black]
line-length = 120

[tool.ruff]
line-length = 120
target-version = "py39"

[tool.ruff.lint]
select = ["C90", "E", "F", "I", "W"]
ignore = ["E501", "E741"]

[tool.ruff.lint.mccabe]
max-complexity = 18

[tool.mypy]
python_version = "3.9"
ignore_missing_imports = true
plugins = ["pydantic.mypy"]
